--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - ./static:/app/static
       - ./media:/app/media
+      - ./sample_data:/app/sample_data
     depends_on:
       - db
     networks:
