--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   web:
     build: .
-    command: sh -c "python manage.py migrate && gunicorn directory_factory.wsgi:application --bind 0.0.0.0:8000 --workers 2"
+    command: sh -c "python manage.py collectstatic --noinput && python manage.py migrate && gunicorn directory_factory.wsgi:application --bind 0.0.0.0:8000 --workers 2"
     ports:
       - "8000:8000"
     env_file:
@@ -11,6 +11,7 @@ services:
     restart: always
     volumes:
       - ./static:/app/static
+      - ./staticfiles:/app/staticfiles
       - ./media:/app/media
       - ./sample_data:/app/sample_data
     depends_on:
